--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,51 @@
 .bg-green {
-    background-color: #16b016;
+  background-color: #16b016;
+}
+
+.text-green {
+  color: #16b016;
+}
+
+.white-color {
+  color:white;
+}
+
+.tab {
+  display: none;
+}
+.step {
+  display: inline-block;
+  padding: 10px;
+  margin-right: 5px;
+  background-color: #f1f1f1;
+  border-radius: 50%;
+}
+.step.active {
+  background-color: #4caf50;
+  color: white;
+}
+
+.invalid {
+  border-color: red;
+}
+
+.tab {
+  display: none;
+}
+
+.step {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbbbbb;
+  border: none;
+  border-radius: 50%;
+  display: inline-block;
+  opacity: 0.5;
+}
+.step.active {
+  opacity: 1;
+}
+.step.finish {
+  background-color: #4caf50;
 }
